--- a/css/style.css
+++ b/css/style.css
@@ -1,18 +1,44 @@
 body{
     font-family: 'Poppins', sans-serif;
-    font-family: 'Roboto Condensed', sans-serif;
-    background-color: aliceblue;
+    background-color: #F3F1FF;
 }
 /* top players style */
+.top-players{
+    margin-bottom: 30px;
+}
+.title{
+    font-size: 24px;
+    color: #562EFF;
+    margin-top: 3px;
+}
 .players{
     display: grid;
     grid-template-columns: repeat(3, 1fr);
+    grid-row-gap: 29px;
+}
+main{
+    display: flex;
+    justify-content: center;
+}
+.container{
+    background-color: white;
+    width: 870px;
+    height: 679px;
+    padding: 30px;
 }
 player{
      display: flex;
-     align-items: center;
 }
 player img{
     width: 56px;
     height: 56px;
+}
+.pname{
+    margin-left: 16px;
+    font-size: 18px;
+    font-weight: 500;
+}
+hr{
+    border: 1px solid #D1D1D1;
+    
 }
